# rust_flutter_example

./: .gitignore  Cargo.toml  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: AppDelegate.swift  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  ffi.dart  main.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
web/: index.html
windows/: CMakeLists.txt
