[package]
name = "flutterrustexample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "flutterrustexample"
crate-type = ["staticlib"]
[dependencies]
flutter_rust_bridge_macros =  "=1.80.1"
flutter_rust_bridge = "=1.80.1"
num = "0.4"                                             # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
image = "0.24.3"                                        # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
crossbeam = "0.8"                                     # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
rand = "0.8.5"     